--- a/PlutoWallet/View/MainPage.xaml
+++ b/PlutoWallet/View/MainPage.xaml
@@ -19,7 +19,7 @@
     <AbsoluteLayout
          AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-               Source="nightskybg.png" Aspect="AspectFill"/>
+               Source="space.png" Aspect="AspectFill"/>
         <ScrollView
             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
 
