--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -3,12 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.TransferView.TransferView"
              IsVisible="{Binding IsVisible}"
-             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
-             AbsoluteLayout.LayoutFlags="PositionProportional">
+             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+             AbsoluteLayout.LayoutFlags="All"
+             BackgroundColor="#66000000">
     
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20">
+           CornerRadius="20"
+           HorizontalOptions="Center"
+           VerticalOptions="Center">
         <AbsoluteLayout>
 
             <VerticalStackLayout MaximumWidthRequest="300">
@@ -53,14 +56,16 @@
                         Clicked="SignAndTransferClicked"/>
             </VerticalStackLayout>
 
-           <Label AbsoluteLayout.LayoutBounds="0, 0, 40, 40"
-                   Text="&lt;" FontAttributes="Bold">
-                <Label.GestureRecognizers>
+           <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 40, 40">
+                <Image AbsoluteLayout.LayoutBounds="0, 0, 20, 20"
+                   Source="{AppThemeBinding Light=arrowbackblack.png, Dark=backwhite.png }" />
+
+                <AbsoluteLayout.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnBackClicked" />
 
-                </Label.GestureRecognizers>
+                </AbsoluteLayout.GestureRecognizers>
 
-            </Label>
+            </AbsoluteLayout>
         </AbsoluteLayout>
         
     </Frame>
