--- a/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
+++ b/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
@@ -2,12 +2,16 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.ConnectionRequestView.ConnectionRequestView"
-             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
-             AbsoluteLayout.LayoutFlags="PositionProportional"
-             IsVisible="{Binding IsVisible}">
+             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+             AbsoluteLayout.LayoutFlags="All"
+             BackgroundColor="#66000000"
+             IsVisible="{Binding IsVisible}"
+             >
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20">
+           CornerRadius="20"
+            HorizontalOptions="Center"
+           VerticalOptions="Center">
         <AbsoluteLayout>
             <VerticalStackLayout>
                 <Image x:Name="icon"
