--- a/PlutoWallet/Components/MessagePopup/MessagePopupView.xaml
+++ b/PlutoWallet/Components/MessagePopup/MessagePopupView.xaml
@@ -2,13 +2,16 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.MessagePopup.MessagePopupView"
-             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
-             AbsoluteLayout.LayoutFlags="PositionProportional"
+             AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+             AbsoluteLayout.LayoutFlags="All"
+             BackgroundColor="#66000000"
              IsVisible="{Binding IsVisible}">
 
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
-           CornerRadius="20">
+           CornerRadius="20"
+            HorizontalOptions="Center"
+           VerticalOptions="Center">
         <AbsoluteLayout>
 
             <VerticalStackLayout>
@@ -27,14 +30,16 @@
                         Clicked="OnBackClicked" />
             </VerticalStackLayout>
 
-            <Label AbsoluteLayout.LayoutBounds="0, 0, 40, 40"
-                   Text="&lt;" FontAttributes="Bold">
-                <Label.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnBackTapped" />
+            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 40, 40">
+                <Image AbsoluteLayout.LayoutBounds="0, 0, 20, 20"
+                   Source="{AppThemeBinding Light=arrowbackblack.png, Dark=backwhite.png }" />
 
-                </Label.GestureRecognizers>
+                <AbsoluteLayout.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnBackClicked" />
 
-            </Label>
+                </AbsoluteLayout.GestureRecognizers>
+
+            </AbsoluteLayout>
         </AbsoluteLayout>
     </Frame>
 
