--- a/PlutoWallet/Components/CalamarView/CalamarView.xaml
+++ b/PlutoWallet/Components/CalamarView/CalamarView.xaml
@@ -18,7 +18,8 @@
                     Text="Calamar explorer"
                     FontAttributes="Bold"
                     HorizontalOptions="Center" />
-                <WebView HeightRequest="600" WidthRequest="{Binding Source={x:Reference absoluteLayout}, Path=Width}"
+                <WebView HeightRequest="600"
+                         WidthRequest="{Binding Source={x:Reference absoluteLayout}, Path=Width}"
                          x:Name="calamarWebView"
                          Margin="0, 0, 0, 20"/>
             </VerticalStackLayout>
@@ -35,7 +36,7 @@
 
             </Label>
 
-            <Image WidthRequest="20" Margin="20, 0, 20, 0"
+            <Image WidthRequest="20" Margin="10, 0, 10, 0"
                        VerticalOptions="Center" 
                        HorizontalOptions="Start"
                        AbsoluteLayout.LayoutBounds="1, 0, AutoSize, 30"
@@ -43,9 +44,9 @@
                        >
                 <Image.Source>
                     <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource DarkThemeWhite}}"
-                                        Glyph="&#xf021;"
-                                         FontFamily="FontAwesome"
-                                         Size="20" />
+                                    Glyph="&#xf021;"
+                                    FontFamily="FontAwesome"
+                                    Size="20" />
                 </Image.Source>
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer Tapped="OnReloadClicked" />
