--- a/PlutoWallet/Components/Balance/BalanceView.xaml
+++ b/PlutoWallet/Components/Balance/BalanceView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.BalanceView.BalanceView"
+             x:Class="PlutoWallet.Components.Balance.BalanceView"
              HeightRequest="30">
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
