--- a/PlutoWallet/Components/Staking/StakingEntryView.xaml
+++ b/PlutoWallet/Components/Staking/StakingEntryView.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:switch="clr-namespace:PlutoWallet.Components.Switch" xmlns:webview="clr-namespace:PlutoWallet.Components.WebView"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:switch="clr-namespace:PlutoWallet.Components.Switch"
+             xmlns:webview="clr-namespace:PlutoWallet.Components.WebView"
              x:Class="PlutoWallet.Components.Staking.StakingEntryView"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
              AbsoluteLayout.LayoutFlags="All"
