--- a/PlutoWallet/View/MainPage.xaml
+++ b/PlutoWallet/View/MainPage.xaml
@@ -29,7 +29,7 @@
                 Spacing="15"
                 Padding="30,0">
 
-                <networkselect:NetworkSelectView />
+                <networkselect:MultiNetworkSelectView />
 
                 <dappconnectionview:DAppConnectionView />
 
