--- a/PlutoWallet/Components/NetworkSelect/NetworkSelectView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/NetworkSelectView.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlutoWallet.Components.NetworkSelect.NetworkSelectView" HeightRequest="50" WidthRequest="200">
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 200, 50" >
         <Frame CornerRadius="25"
