--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectView.xaml
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              x:Class="PlutoWallet.Components.NetworkSelect.MultiNetworkSelectView"
-             HorizontalOptions="Center">
+             AbsoluteLayout.LayoutBounds="0.5, 0, AutoSize, 46"
+             AbsoluteLayout.LayoutFlags="PositionProportional">
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, AutoSize, 46" >
         <Frame CornerRadius="23"
                AbsoluteLayout.LayoutBounds="0, 0, AutoSize, 46"
@@ -38,6 +40,16 @@
                 <networkselect:NetworkBubbleView x:Name="bubble4" IsVisible="false" Tapped="OnNetworkClicked">
                     <networkselect:NetworkBubbleView.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnNetworkClicked" />
+
+                    </networkselect:NetworkBubbleView.GestureRecognizers>
+
+                </networkselect:NetworkBubbleView>
+
+                 <networkselect:NetworkBubbleView Tapped="OnOtherNetworksClicked"
+                                                  Icon="menuwhite.png"
+                                                  >
+                    <networkselect:NetworkBubbleView.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnOtherNetworksClicked" />
 
                     </networkselect:NetworkBubbleView.GestureRecognizers>
 
