--- a/PlutoWallet/View/CustomCallPage.xaml
+++ b/PlutoWallet/View/CustomCallPage.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
-             xmlns:transactionrequest="clr-namespace:PlutoWallet.Components.TransactionRequest" xmlns:argumentsview="clr-namespace:PlutoWallet.Components.ArgumentsView"
+             xmlns:transactionrequest="clr-namespace:PlutoWallet.Components.TransactionRequest"
+             xmlns:argumentsview="clr-namespace:PlutoWallet.Components.ArgumentsView"
              x:Class="PlutoWallet.View.CustomCallPage"
              Title="Custom Call">
     <AbsoluteLayout x:Name="absoluteLayout"
@@ -14,7 +14,6 @@
             <VerticalStackLayout
                     Spacing="15"
                     Padding="30,0">
-                <networkselect:NetworkSelectView />
 
                 <Picker
                     Title="Pallet"
