Connecting the chain selection to other components

--- a/PlutoWallet/Components/Balance/BalanceView.xaml
+++ b/PlutoWallet/Components/Balance/BalanceView.xaml
@@ -17,7 +17,8 @@
                                     WidthRequest="{Binding Source={x:Reference frame}, Path=Width}"
                                    >
                 <Image Source="polkadot.png"
-                       HeightRequest="20" WidthRequest="20" Margin="0, 0, 10, 0" />
+                       HeightRequest="20" WidthRequest="20" Margin="0, 0, 10, 0"
+                       IsVisible="false"/>
                 <Label 
                     Text="Balance "
                     VerticalOptions="Center" 
