--- a/PlutoWallet/View/MainPage.xaml
+++ b/PlutoWallet/View/MainPage.xaml
@@ -44,6 +44,8 @@
                     Title="Substrate key"
                     Address="{Binding SubstrateKey}"/>
 
+                <addressview:ChainAddressView />
+
                 <balance:BalanceView />
 
                 <extrinsic:ExtrinsicStatusView
