--- a/PlutoWallet/Components/NavigationBar/NavigationBarView.xaml
+++ b/PlutoWallet/Components/NavigationBar/NavigationBarView.xaml
@@ -17,11 +17,17 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0"
-                   Text="Home"
                    TextColor="White"
                    FontAttributes="Bold"
                    HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center">
+                <Label.FormattedText>
+                  <FormattedString>
+                     <Span Text="Home" FontAttributes="Bold"/>
+                  </FormattedString>
+               </Label.FormattedText>
+
+            </Label>
 
             <Label Grid.Column="2"
                    Text="NFTs"
