--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
@@ -29,7 +29,7 @@
                         AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                          AbsoluteLayout.LayoutFlags="All"
                         x:Name="tapGestureView"
-                        Opacity="0"/>
+                        Opacity="{OnPlatform Android=0, Default=1}"/>
 
             </AbsoluteLayout>
             
